<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_request"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dfdfdf"
    tools:context="com.nantes.polytech.netapsys.activity.RequestActivity">

    <TextView
        android:id="@+id/title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/request_activity_title"
        android:layout_centerHorizontal="true"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:textSize="16sp"
        android:fontFamily="Roboto Regular"
        android:textStyle="bold"
        />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        >
        <Button
            android:id="@+id/btnSelect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select"
            android:layout_marginBottom="20dp"
            android:width="150dp"
            android:textColor="#ffffff"
            android:background="@drawable/button_request"
            />
        <Button
            android:id="@+id/btnInsert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insert"
            android:layout_below="@+id/btnSelect"
            android:layout_marginBottom="20dp"
            android:layout_alignParentStart="true"
            android:width="150dp"
            android:textColor="#ffffff"
            android:background="@drawable/button_request"
            />

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnInsert"
            android:text="@string/update"
            android:layout_alignStart="@+id/btnInsert"
            android:layout_alignEnd="@+id/btnInsert"
            android:layout_marginBottom="20dp"
            android:textColor="#ffffff"
            android:background="@drawable/button_request"
            />
        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnUpdate"
            android:text="@string/delete"
            android:layout_alignStart="@+id/btnUpdate"
            android:layout_alignEnd="@+id/btnUpdate"
            android:textColor="#ffffff"
            android:background="@drawable/button_request"
            />

    </RelativeLayout>
</RelativeLayout>
